# OpenAPI.yaml
@@ -24,6 +24,7 @@ paths:
           description: Internal Server Error.
       tags:
         - Grades
+        - Grades
   /v0/product/{barcode}:
     post:
       operationId: ProductController_getProductDetails
@@ -43,7 +44,8 @@ paths:
         '500':
           description: Internal Server Error.
       tags:
-        - Product Information
+        - Product
+        - Product
   /v0/ingredients/{ingredients}:
     get:
       operationId: IngredientsController_getIngredients
@@ -65,6 +67,7 @@ paths:
             ?translate=false to the request.
       tags:
         - Ingredients
+        - Ingredients
   /v1/ingredients/{ingredients}:
     get:
       operationId: IngredientsV1Controller_getIngredients
@@ -76,15 +79,13 @@ paths:
             type: string
       responses:
         '200':
-          description: Request returned a positive result.
+          description: >-
+            Request returned a positive result. If translation fails, results
+            will be based on untranslated ingredients.
         '500':
           description: Internal Server Error.
-        '503':
-          description: >-
-            Service Unavailable. Translation service is unavailable. Try again
-            with disabled translation (Results might vary). Add flag
-            ?translate=false to the request.
       tags:
+        - IngredientsV1
         - Ingredients
   /v0/peta/{type}:
     get:
@@ -105,6 +106,7 @@ paths:
         '500':
           description: Internal Server Error.
       tags:
+        - Peta
         - Peta
   /health:
     get:
@@ -227,6 +229,8 @@ servers:
     description: Production server
   - url: https://api.staging.veganify.app
     description: Staging server
+  - url: http://localhost:8080
+    description: Local server
 components:
   schemas:
     BarcodeDto:
